# coiled_coils_search

./: .gitignore  Makefile  README.md  pyproject.toml
coiled-coils-search/: __init__.py  dataset.py  features.py  plots.py
coiled-coils-search/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
references/: random.md
