[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "coiled-coils-search"
version = "0.0.1"
description = "Project with a friend to search coiled coils in kinetochores from yeast"
authors = [
  { name = "Dirk \u0026 Laura" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.7"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["coiled-coils-search"]
force_sort_within_sections = true
